# image-gen-api

./: .gitignore  LICENSE  README.md  appspec.yml  codegen-config.yml  docgen-config.yml  main.py  pyproject.toml  schema.graphql  spectaql-config.yml
.github/workflows/: main.yml
app/: dependencies.py  loading_status.py  main.py  schema.py
app/resolvers/: loader.py  mutations.py  queries.py
app/resolvers/mutations/: __init__.py
app/resolvers/mutations/image_generation/: generate_images.py
app/resolvers/queries/: __init__.py
app/resolvers/queries/user/: get_user.py
app/services/: auth.py  generator_service_config.py  image.py  image_generator.py  timer.py  utils.py
app/services/api_key_service/: api_key_app.py  api_key_manager.py  api_key_service_driver.py
app/services/api_key_service/admin/: dependencies.py  main.py
app/services/api_key_service/database_service/: database_service.py  pocketbase_service.py
app/services/api_key_service/helpers/: api_key_generation.py
app/services/api_key_service/models/: apikey.py  organization.py  user.py
app/services/api_key_service/templates/: base.html  login.html  organizationpage.html  organizations.html  register.html
app/services/billing/: billing_provider.py  cost_calculator.py  mock_billing.py  models.py  paddle_billing.py  service.py
app/services/billing/stripe/: stripe_billing_service.py
app/services/customer_management_service/: customer_management_service.py  utils.py
app/services/model_loaders/: load_model.py
app/services/model_pipeline_registry/: pipeline_registry.py  pipelines.py  types.py
app/services/model_pipeline_registry/custom_pipelines/: deep_floyd_pipeline.py  mock_pipeline.py
app/types/: billing_dependency.py  enums.py  image_generation_input.py  inputs.py  responses.py  scalars.py
app/validators/: __init__.py
app/validators/image_generation_input/: image_count_validator.py  image_dimensions_validator.py
examples/: examples.graphql
pb_data/: data.db  logs.db  logs.db-shm  logs.db-wal
pb_migrations/: 1732051822_created_accounts.js  1732051839_updated_accounts.js  1732052023_updated_accounts.js  1732052035_updated_accounts.js
scripts/: install.sh  setup-pb.sh  start.sh
(+4 files in other folders)
