[tool.poetry]
name = "image-generation-api"
version = "0.1.0"
description = "GraphQL API for AI image generation"
authors = ["Your Name <your.email@example.com>"]
package-mode = false
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
strawberry-graphql = "^0.211.1"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"
python-dotenv = "^1.0.1"
diffusers = {extras = ["torch"], version = "^0.31.0"}
transformers = "^4.46.2"
protobuf = "^5.28.3"
sentencepiece = "^0.2.0"
accelerate = "^1.1.1"
safetensors = "^0.4.5"
numpy = "<2.0"
torch = [
    { version = "2.4.0", markers = "sys_platform == 'darwin'" },
    { url = "https://download.pytorch.org/whl/cu121/torch-2.4.0%2Bcu121-cp311-cp311-win_amd64.whl", markers = "sys_platform == 'win32'" }
]
torchvision = [
    { version = "0.19.0", markers = "sys_platform == 'darwin'" },
    { url = "https://download.pytorch.org/whl/cu121/torchvision-0.19.0%2Bcu121-cp311-cp311-win_amd64.whl", markers = "sys_platform == 'win32'" }
]

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.10.1"
isort = "^5.12.0"
mypy = "^1.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"